Add endpoints to get user, current_user, current user's positions.
